--- a/_posts/2014-07-13-project-6.markdown
+++ b/_posts/2014-07-13-project-6.markdown
@@ -1,7 +1,7 @@
 ---
 title: Round Icons
 subtitle: Graphic Design
-layout: default
+layout: page
 modal-id: 6
 date: 2014-07-15
 img: roundicons.png
