--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -1,15 +1,13 @@
 ---
-title: Dreams
-subtitle: Website Design
+title: Smiling
+subtitle: Outdoors
 layout: page
 modal-id: 1
-date: 2014-07-18
+date: 2014-10-11
 img: frazer-smiling-outdoors.jpg
 thumbnail: frazer-smiling-outdoors-thumbnail.jpg
 alt: Frazer Kirkman, smiling
 project-date: October 2014
-client: Start Bootstrap
-category: Web Development
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+description: A photo of Frazer, enjoying the sunlight outdoors. Photo by Michael Kubler <a href="https://twitter.com/kublermdk" target="_blank">@kublermdk</a>
 
 ---
